# music_visualizer

./: .gitignore  FileWatcherLinux.cpp  LICENSE  MFileWatcher.cpp  README.md  TODO.md  main.cpp
common/: FileWatcherLinux.cpp  LinuxAudioStream.cpp  MFileWatcher.cpp  Renderer.cpp  ShaderConfig.cpp  ShaderPrograms.cpp  WavAudioStream.cpp  Window.cpp  noise.cpp
docs/: CMakeLists.txt  DEPENDECIES_PULSE.txt  MusicVisualizerREADME.md  README.md
include/: AudioProcess.h  AudioStream.h  FileWatcher.h  FileWatcherImpl.h  FileWatcherLinux.h  LinuxAudioStream.h  MFileWatcher.h  ProceduralAudioStream.h  Renderer.h  ShaderConfig.h  ShaderPrograms.h  WavAudioStream.h  pulse_misc.h
shaders/orangestar/: image.frag
shaders/oscilloscope/: B.frag
shaders/spikestar/: image.frag
